# qbaylogic-clash-based-macipudp-stack-spring24

./: .envrc  .gitignore  .stylish-haskell.yaml  LICENSE  Makefile  README.md  UART_MDIO.py  build-ci-image.nix  cabal.project  clash-eth.cabal  default.nix  diff.patch  env.sh.default  eth_uart.py  fourmolu.yaml  hie.yaml  mac_frame.py  out.txt  outpuf.dif  output.diff  pinout.lpf  shell.nix  uart_over_eth.py
.ci/: test_whitespace.sh
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: linting.yaml  test.yaml
diagram/: arp.puml  build.sh  crit-path-sprint3.puml  crit-path-sprint4.puml  critical-path-sprint1.puml  layer1+2-arch.puml  product-backlog.puml  uart-eth.puml
nix/: aarch64-reloc.patch  abc-verifier.nix  ecpprog.nix  nextpnr.nix  nixpkgs.nix  sources.json  trellis.nix  yosys-ecp5-infer-outreg.nix  yosys.nix
python_tests/: env.py.default  test_arp_udp_echo.py  test_eth_uart_echo.py  test_example.py  test_ip_echo.py  test_uart_echo.py  test_uart_to_eth.py  util.py
python_tests/disabled/: test_eth_echo.py
src/Clash/Cores/ARP/: ArpTable.hs  ArpTypes.hs
src/Clash/Cores/Arp/: ArpManager.hs  ArpReceiver.hs  ArpTable.hs  ArpTransmitter.hs  ArpTypes.hs
src/Clash/Cores/Ethernet/: Arp.hs  ArpStack.hs  AsyncFIFO.hs  Converters.hs  DepacketizeToDf.hs  Depacketizer.hs  DownConverter.hs  EchoStack.hs  Ethernet.hs  EthernetTypes.hs  FcsInserter.hs  Frame.hs  FrameCheckSequence.hs  ICMP.hs  IPDepacketizer.hs  Icmp.hs  InternetChecksum.hs  InterpacketGapInserter.hs  IpPacketizer.hs  MDIO.hs  MII.hs  MacDepacketizer.hs  MacPacketizer.hs  PacketArbiter.hs  PacketBuffer.hs  PacketDispatcher.hs  PacketStream.hs  PacketizeFromDf.hs  Packetizer.hs  PadPacket.hs  PaddingInserter.hs  PreambleInserter.hs  PreambleStripper.hs  RGMII.hs  RGMIIAdapter.hs  RxStack.hs  TxStack.hs  Udp.hs  UpConverter.hs  Util.hs
src/Clash/Cores/Ethernet/Arp/: ArpManager.hs  ArpReceiver.hs  ArpTable.hs  ArpTransmitter.hs  ArpTypes.hs
src/Clash/Cores/Ethernet/Examples/: ArpStack.hs  EchoStack.hs  ExampleMacTxStack.hs  FullUdpStack.hs  IPStack.hs  RxStack.hs  RxStacks.hs  TxStack.hs  TxStacks.hs
src/Clash/Cores/Ethernet/IP/: EthernetStream.hs  IPDepacketizer.hs  IPPacketizer.hs  IPPacketizers.hs  IPv4Types.hs  InternetChecksum.hs
src/Clash/Cores/Ethernet/Icmp/: IcmpTypes.hs
src/Clash/Cores/Ethernet/Mac/: EthernetTypes.hs  FrameCheckSequence.hs  InterpacketGapInserter.hs  MacDepacketizer.hs  MacPacketizer.hs  MacPacketizers.hs  PaddingInserter.hs  Preamble.hs  PreambleInserter.hs  PreambleStripper.hs
src/Clash/Cores/IP/: IPDepacketizer.hs  IPv4Types.hs  Icmp.hs  IcmpTypes.hs
src/Clash/Lattice/ECP5/: Prims.hs  RGMII.hs  UART.hs
src/Clash/Lattice/ECP5/Colorlight/: Bridge.hs  CRG.hs  TopEntity.hs  UartEthRxStack.hs  UartEthTxStack.hs
src/Clash/Signal/: Extra.hs
src/Clash/Sized/Vector/: Extra.hs
src/Clash/TinyTapeout/EthernetMac/: Credits.hs  EthStack.hs  IcmpEcho.hs  TopEntity.hs
src/Data/Maybe/: Extra.hs
src/Protocols/Df/: Extra.hs
src/Protocols/Extra/: PacketStream.hs
src/Protocols/Extra/PacketStream/: AsyncFIFO.hs  Converters.hs  DelayCircuit.hs  Depacketizer.hs  DownConverter.hs  PacketArbiter.hs  PacketBuffer.hs  PacketDispatcher.hs  PacketRouting.hs  PacketizeFromDf.hs  Packetizer.hs  Packetizers.hs  Routing.hs  UpConverter.hs
src/Sized/Vector/: Extra.hs
tests/: MaybeControl.hs  doctests.hs  unittests.hs
tests/Test/Cores/ARP/: ArpTable.hs
tests/Test/Cores/Arp/: ArpManager.hs  ArpReceiver.hs  ArpTable.hs  ArpTransmitter.hs
tests/Test/Cores/Ethernet/: Arp.hs  AsyncFIFO.hs  Depacketizer.hs  DownConverter.hs  Ethernet.hs  EthernetTypes.hs  FcsInserter.hs  FrameCheckSequence.hs  ICMP.hs  IPDepacketizer.hs  Icmp.hs  InternetChecksum.hs  InterpacketGapInserter.hs  IpPacketizer.hs  MacDepacketizer.hs  MacPacketizer.hs  MaybeControl.hs  MaybeControlProperty.hs  PacketArbiter.hs  PacketBuffer.hs  PacketDispatcher.hs  PacketStream.hs  Packetizer.hs  PadPacket.hs  PaddingInserter.hs  PreambleInserter.hs  PreambleStripper.hs  UpConverter.hs  Util.hs
tests/Test/Cores/Ethernet/Arp/: ArpManager.hs  ArpReceiver.hs  ArpTable.hs  ArpTransmitter.hs
tests/Test/Cores/Ethernet/IP/: EthernetStream.hs  IPDepacketizer.hs  IPPacketizer.hs  IPPacketizers.hs  Icmp.hs  InternetChecksum.hs
tests/Test/Cores/Ethernet/Mac/: AsyncFIFO.hs  EthernetTypes.hs  FrameCheckSequence.hs  InterpacketGapInserter.hs  MacDepacketizer.hs  MacPacketizer.hs  MacPacketizers.hs  PaddingInserter.hs  Preamble.hs  PreambleInserter.hs  PreambleStripper.hs
tests/Test/Cores/IP/: IPDepacketizer.hs  Icmp.hs
tests/Test/Lattice/ECP5/: UART.hs
tests/Test/Protocols/Extra/: PacketStream.hs
tests/Test/Protocols/Extra/PacketStream/: AsyncFIFO.hs  Converters.hs  DelayCircuit.hs  Depacketizer.hs  DownConverter.hs  Extra.hs  PacketArbiter.hs  PacketBuffer.hs  PacketDispatcher.hs  PacketRouting.hs  Packetizer.hs  Packetizers.hs  Routing.hs  UpConverter.hs
tests/Test/TinyTapeout/: Credits.hs  IcmpEcho.hs
tests/Test/TinyTapeout/IcmpEcho/: PacketFifo.hs
