cabal-version:       2.4
name:                clash-eth
version:             0.1
license:             BSD-2-Clause
author:              Rowan Goemans <goemansrowan@gmail.com>
maintainer:          Rowan Goemans <goemansrowan@gmail.com>

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    ImportQualifiedPost

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fconstraint-solver-iterations=10

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper

    -- Strict annotations - while sometimes preventing space leaks - trigger
    -- optimizations Clash can't deal with. See:
    --
    --    https://github.com/clash-lang/clash-compiler/issues/2361
    --
    -- These flags disables these optimizations. Note that the fields will
    -- remain strict.
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
  build-depends:
    base,
    Cabal,

    -- clash-prelude will set suitable version bounds for the plugins and clash-ghc
    clash-prelude >= 1.6.4 && < 1.8,
    clash-protocols,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat

custom-setup
  setup-depends:
    base          >= 4.11 && <5,
    Cabal         >= 2.4,
    cabal-doctest >= 1.0.1 && <1.1

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Clash.Lattice.ECP5.Colorlight.TopEntity
    Clash.Cores.Ethernet.Depacketizer
    Clash.Cores.Ethernet.EthernetTypes
    Clash.Cores.Ethernet.MacDepacketizer
    Clash.Cores.Ethernet.RGMII
    Clash.Cores.Ethernet.PacketArbiter
    Clash.Cores.Ethernet.PacketBuffer
    Clash.Cores.Ethernet.PacketDispatcher
    Clash.Cores.Ethernet.PacketStream
    Clash.Cores.Ethernet.PaddingInserter
    Clash.Cores.Ethernet.PreambleStripper
    Clash.Cores.Ethernet.UpConverter
    Clash.Cores.Ethernet.DownConverter
    Clash.Cores.Ethernet.RxStack
    Clash.Cores.Ethernet.TxStack
    Clash.Cores.Ethernet.Util
    Clash.Cores.Ethernet.InterpacketGapInserter
    Clash.Cores.Ethernet.AsyncFIFO
    Clash.Cores.Ethernet.InternetChecksum
    Clash.Lattice.ECP5.Prims
    Clash.Lattice.ECP5.UART
    Clash.Lattice.ECP5.Colorlight.CRG
    Clash.Lattice.ECP5.Colorlight.UartEthRxStack
    Clash.Lattice.ECP5.Colorlight.UartEthTxStack
  default-language: Haskell2010
  build-depends:
    interpolate,
    clash-cores,
    deepseq,
    hashable,
    constraints,
    -- For debugging
    pretty-show

test-suite doctests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          doctests.hs
  ghc-options:      -Wall -Wcompat -threaded
  hs-source-dirs:   tests
  build-depends:
    base,
    clash-eth,
    doctest >= 0.17 && <= 0.19,
    process,

test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: unittests.hs
  other-modules:
    Test.Cores.Ethernet.Depacketizer
    Test.Cores.Ethernet.MacDepacketizer
    Test.Cores.Ethernet.Util
    Test.Cores.Ethernet.PacketArbiter
    Test.Cores.Ethernet.PacketStream
    Test.Cores.Ethernet.PaddingInserter
    Test.Cores.Ethernet.PacketDispatcher
    Test.Cores.Ethernet.PreambleStripper
    Test.Lattice.ECP5.UART
    Test.Cores.Ethernet.DownConverter
    Test.Cores.Ethernet.UpConverter
    Test.Cores.Ethernet.PacketBuffer
    Test.Cores.Ethernet.InterpacketGapInserter
    Test.Cores.Ethernet.AsyncFIFO
    Test.Cores.Ethernet.InternetChecksum
  build-depends:
    clash-eth,
    QuickCheck,
    hedgehog,
    clash-cores,
    hashable,
    unordered-containers,
    tasty >= 1.2 && < 1.5,
    tasty-hedgehog,
    tasty-th,
    pretty-show

-- Builds the executable 'clash', with clash-eth project in scope
executable clash
  main-is: bin/Clash.hs
  default-language: Haskell2010
  Build-Depends: base, clash-ghc, clash-eth

-- Builds the executable 'clashi', with clash-eth project in scope
executable clashi
  main-is: bin/Clashi.hs
  default-language: Haskell2010
  build-depends: base, clash-ghc, clash-eth
