cabal-version:       2.4
name:                clash-eth
version:             0.1
license:             BSD-2-Clause
author:              Rowan Goemans <goemansrowan@gmail.com>
maintainer:          Rowan Goemans <goemansrowan@gmail.com>

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    ImportQualifiedPost

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- circuit-notation plugin
    -fplugin Protocols.Plugin

    -fconstraint-solver-iterations=10

    -fplugin Protocols.Plugin

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper

    -- Strict annotations - while sometimes preventing space leaks - trigger
    -- optimizations Clash can't deal with. See:
    --
    --    https://github.com/clash-lang/clash-compiler/issues/2361
    --
    -- These flags disables these optimizations. Note that the fields will
    -- remain strict.
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
  build-depends:
    base,
    Cabal,

    -- clash-prelude will set suitable version bounds for the plugins and clash-ghc
    clash-prelude >= 1.6.4 && < 1.8,
    clash-protocols,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat

custom-setup
  setup-depends:
    base          >= 4.11 && <5,
    Cabal         >= 2.4,
    cabal-doctest >= 1.0.1 && <1.1

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Clash.Cores.Ethernet.Arp.ArpManager
    Clash.Cores.Ethernet.Arp.ArpTable
    Clash.Cores.Ethernet.Arp.ArpReceiver
    Clash.Cores.Ethernet.Arp.ArpTransmitter
    Clash.Cores.Ethernet.Arp.ArpTypes
    Clash.Cores.Ethernet.Examples.EchoStack
    Clash.Cores.Ethernet.Examples.RxStack
    Clash.Cores.Ethernet.Examples.TxStack
    Clash.Cores.Ethernet.Icmp.IcmpTypes
    Clash.Cores.Ethernet.IP.InternetChecksum
    Clash.Cores.Ethernet.IP.IPPacketizers
    Clash.Cores.Ethernet.IP.IPv4Types
    Clash.Cores.Ethernet.Mac.EthernetTypes
    Clash.Cores.Ethernet.Mac.FrameCheckSequence
    Clash.Cores.Ethernet.Mac.InterpacketGapInserter
    Clash.Cores.Ethernet.Mac.MacPacketizers
    Clash.Cores.Ethernet.Mac.PaddingInserter
    Clash.Cores.Ethernet.Mac.Preamble
    Clash.Cores.Ethernet.Icmp
    Clash.Lattice.ECP5.Colorlight.CRG
    Clash.Lattice.ECP5.Colorlight.TopEntity
    Clash.Lattice.ECP5.Prims
    Clash.Lattice.ECP5.RGMII
    Protocols.Extra.PacketStream.AsyncFIFO
    Protocols.Extra.PacketStream.Converters
    Protocols.Extra.PacketStream.Depacketizer
    Protocols.Extra.PacketStream.PacketBuffer
    Protocols.Extra.PacketStream.PacketizeFromDf
    Protocols.Extra.PacketStream.Packetizer
    Protocols.Extra.PacketStream.PacketRouting
    Protocols.Extra.PacketStream
  other-modules:
    Clash.Signal.Extra
    Clash.Sized.Vector.Extra
    Data.Maybe.Extra
    Protocols.Df.Extra
  default-language: Haskell2010
  build-depends:
    interpolate,
    clash-cores,
    clash-cores-crc,
    deepseq,
    hashable,
    constraints,
    -- For debugging
    pretty-show

test-suite doctests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          doctests.hs
  ghc-options:      -Wall -Wcompat -threaded
  hs-source-dirs:   tests
  build-depends:
    base,
    clash-eth,
    doctest >= 0.17 && <= 0.19,
    process,

test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: unittests.hs
  other-modules:
    Test.Cores.Arp.ArpManager
    Test.Cores.Arp.ArpReceiver
    Test.Cores.Arp.ArpTable
    Test.Cores.Arp.ArpTransmitter
    Test.Cores.Ethernet.Depacketizer
    Test.Cores.Ethernet.MacDepacketizer
    Test.Cores.Ethernet.Util
    Test.Cores.Ethernet.PacketArbiter
    Test.Cores.Ethernet.PacketStream
    Test.Cores.Ethernet.PaddingInserter
    Test.Cores.Ethernet.PacketDispatcher
    Test.Cores.Ethernet.PreambleInserter
    Test.Cores.Ethernet.PreambleStripper
    Test.Cores.Ethernet.DownConverter
    Test.Cores.Ethernet.UpConverter
    Test.Cores.Ethernet.PacketBuffer
    Test.Cores.Ethernet.IpPacketizer
    Test.Cores.Ethernet.InterpacketGapInserter
    Test.Cores.Ethernet.FrameCheckSequence
    Test.Cores.Ethernet.AsyncFIFO
    Test.Cores.Ethernet.InternetChecksum
    Test.Cores.Ethernet.Packetizer
    Test.Cores.Ethernet.MacPacketizer
    Test.Cores.Ethernet.EthernetTypes
    Test.Cores.IP.Icmp
    Test.Cores.IP.IPDepacketizer
  build-depends:
    clash-eth,
    QuickCheck,
    hedgehog,
    clash-cores,
    clash-cores-crc,
    hashable,
    unordered-containers,
    tasty >= 1.2 && < 1.5,
    tasty-hedgehog,
    tasty-th,
    pretty-show

-- Builds the executable 'clash', with clash-eth project in scope
executable clash
  main-is: bin/Clash.hs
  default-language: Haskell2010
  Build-Depends: base, clash-ghc, clash-eth

-- Builds the executable 'clashi', with clash-eth project in scope
executable clashi
  main-is: bin/Clashi.hs
  default-language: Haskell2010
  build-depends: base, clash-ghc, clash-eth
